logging has changed, according to the remarks